
Bug Fixes
* Clock tooltip no longer off by 3 days - thanks to Ed Stegman for the exquisite bug report
* Installer no longer removes deprecated mb.xml, since it was re-added as a new search in 3.1.9.1
* openSearchWindow function now uses pagetemplate setting (Shawn K. Hall)
* ebay,ebayuk - /my switch wasn't working anymore (Glenn Carr)
* musicbrainz - fixed broken link (MLL)

New Searches
* sarc - Searches the Symantec AntiVirus Research Corp (SARC) site. (Shawn K. Hall)
* ans - get answers at answers.com (google now links to them, too) (MLL)
* ggl - Google Local Search (Brent Beardsley)
* tn - Technorati.com search (Brent Beardsley)
* dlc - Del.icio.us search (Brent Beardsley)
* ror - Ruby on Rails search (Brent Beardsley)
* seedler - Search for seedler.org (Shawn K. Hall)
* om - Omgili search (Tom Corcoran)
* ebayuk - Specialized EBay UK search (David Golding, by reminder of Tom C)
* bbust - Search blockbuster.com (Glenn Carr)
* qsfreq - Display frequency of searches used; requires change to history.js and enabled with "qsfreqLogSearchFrequency = 1" in localprefs.js (Glenn Carr)
* allpod - AllPodcasts Podcast promotional engine (Shawn K. Hall)
* ausr - Australian Domain Registry search (Shawn K. Hall)
* autolink - AutoLink automatic text-linking from supplied text (Shawn K. Hall)
* ay2z - aytozon is a mashup for shopping eBay and Amazon simultaneously. (Shawn K. Hall)
* babyname - ThinkBabyNames provides a broad searchable index of names and their meanings, genders and various spellings. (Shawn K. Hall)
* becom - Become search (Shawn K. Hall)
* blinkx - Blinkx.tv television/media clips (Shawn K. Hall)
* brainb - BrainBoost answer engine, powered by Answers.com (Shawn K. Hall)
* checkdns - CheckDNS provides realtime DNS analysis for domain and server problems (Shawn K. Hall)
* chmoog - Chemical name and suppliers search (Shawn K. Hall)
* ciseek - Competitive Intelligence Resource Index (Shawn K. Hall)